# EzPlayer

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mp3filemanager.cpp  mp3filemanager.h  mp3manager.cpp  mp3manager.h  mp3player.cpp  mp3player.h  song.cpp  song.h
taglib/: CMakeLists.txt
taglib/taglib/: CMakeLists.txt
